add Bootstrap styling

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.7.2 ; python_version >= "3.12" and python_version < "4.0"
+crispy-bootstrap5==2023.10 ; python_version >= "3.12" and python_version < "4.0"
+django-crispy-forms==2.1 ; python_version >= "3.12" and python_version < "4.0"
 django==4.2.7 ; python_version >= "3.12" and python_version < "4.0"
 environs==9.5.0 ; python_version >= "3.12" and python_version < "4.0"
 marshmallow==3.20.1 ; python_version >= "3.12" and python_version < "4.0"
