--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.12"
 django = "^4.2.7"
 environs = "^9.5.0"
 psycopg2-binary = "^2.9.9"
+django-crispy-forms = "^2.1"
+crispy-bootstrap5 = "^2023.10"
 
 
 [build-system]
