--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ django-crispy-forms = "^2.1"
 crispy-bootstrap5 = "^2023.10"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
 pillow = "^10.1.0"
+faker = "^20.0.0"
+transliterate = "^1.10.2"
 
 
 [build-system]
