--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,14 @@ psycopg2-binary==2.9.9 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
+asgiref==3.7.2
+crispy-bootstrap5==2023.10
+Django==4.2.7
+django-crispy-forms==2.1
+environs==9.5.0
+marshmallow==3.20.1
+packaging==23.2
+python-dotenv==1.0.0
+sqlparse==0.4.4
+typing_extensions==4.8.0
+tzdata==2023.3
