--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
 pillow = "^10.1.0"
 faker = "^20.0.0"
 transliterate = "^1.10.2"
+django-birthday = "^0.1.4"
 
 
 [build-system]
