--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2 ; python_version >= "3.12" and python_version < "4.0"
 crispy-bootstrap5==2023.10 ; python_version >= "3.12" and python_version < "4.0"
+django-birthday==0.1.4 ; python_version >= "3.12" and python_version < "4.0"
 django-crispy-forms==2.1 ; python_version >= "3.12" and python_version < "4.0"
 django-phonenumber-field[phonenumbers]==7.2.0 ; python_version >= "3.12" and python_version < "4.0"
 django==4.2.7 ; python_version >= "3.12" and python_version < "4.0"
