--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pillow = "^10.1.0"
 faker = "^20.0.0"
 transliterate = "^1.10.2"
 django-birthday = "^0.1.4"
+dj-database-url = "^2.1.0"
+dj-email-url = "^1.0.6"
 
 
 [build-system]
