--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
 readme = "README.md"
-packages = [{include = "django_project"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -30,6 +29,8 @@ pathspec = "^0.11.2"
 platformdirs = "^4.0.0"
 sqlparse = "^0.4.4"
 typing-extensions = "^4.8.0"
+django-environ = "^0.11.2"
+django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
 
 
 [build-system]
