--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ sqlparse = "^0.4.4"
 typing-extensions = "^4.8.0"
 django-environ = "^0.11.2"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
+bs4 = "^0.0.1"
+lxml = "^4.9.3"
 
 
 [build-system]
