--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,11 @@ transliterate==1.10.2 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
 whitenoise==6.6.0 ; python_version >= "3.12" and python_version < "4.0"
+
+django~=4.2.7
+bs4~=0.0.1
+beautifulsoup4~=4.12.2
+faker~=20.0.3
+transliterate~=1.10.2
+django-birthday~=0.1.4
+environs~=9.5.0
