--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ django-environ = "^0.11.2"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
 bs4 = "^0.0.1"
 lxml = "^4.9.3"
+cloudinary = "^1.36.0"
+django-cloudinary-storage = "^0.3.0"
 
 
 [build-system]
