--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ bs4 = "^0.0.1"
 lxml = "^4.9.3"
 cloudinary = "^1.36.0"
 django-cloudinary-storage = "^0.3.0"
+django-gravatar = "^0.1.0"
+django-gravatar2 = "^1.4.4"
 
 
 [build-system]
