--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,42 @@
 asgiref==3.7.2 ; python_version >= "3.12" and python_version < "4.0"
+beautifulsoup4==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
+bs4==0.0.1 ; python_version >= "3.12" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.12" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
+cloudinary==1.36.0 ; python_version >= "3.12" and python_version < "4.0"
 crispy-bootstrap5==2023.10 ; python_version >= "3.12" and python_version < "4.0"
 dj-database-url==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 dj-email-url==1.0.6 ; python_version >= "3.12" and python_version < "4.0"
 django-birthday==0.1.4 ; python_version >= "3.12" and python_version < "4.0"
 django-cache-url==3.4.4 ; python_version >= "3.12" and python_version < "4.0"
+django-cloudinary-storage==0.3.0 ; python_version >= "3.12" and python_version < "4.0"
 django-crispy-forms==2.1 ; python_version >= "3.12" and python_version < "4.0"
+django-environ==0.11.2 ; python_version >= "3.12" and python_version < "4"
+django-gravatar2==1.4.4 ; python_version >= "3.12" and python_version < "4.0"
+django-gravatar==0.1.0 ; python_version >= "3.12" and python_version < "4.0"
+django-phonenumber-field[phonenumberslite]==7.2.0 ; python_version >= "3.12" and python_version < "4.0"
 django==4.2.7 ; python_version >= "3.12" and python_version < "4.0"
 environs==9.5.0 ; python_version >= "3.12" and python_version < "4.0"
 faker==20.0.3 ; python_version >= "3.12" and python_version < "4.0"
 gunicorn==21.2.0 ; python_version >= "3.12" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.12" and python_version < "4.0"
+lxml==4.9.3 ; python_version >= "3.12" and python_version < "4.0"
 marshmallow==3.20.1 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.11.2 ; python_version >= "3.12" and python_version < "4.0"
+phonenumberslite==8.13.25 ; python_version >= "3.12" and python_version < "4.0"
 pillow==10.1.0 ; python_version >= "3.12" and python_version < "4.0"
 platformdirs==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2-binary==2.9.9 ; python_version >= "3.12" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
+soupsieve==2.5 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.12" and python_version < "4.0"
 transliterate==1.10.2 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
+urllib3==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 whitenoise==6.6.0 ; python_version >= "3.12" and python_version < "4.0"
-
-django~=4.2.7
-bs4~=0.0.1
-beautifulsoup4~=4.12.2
-faker~=20.0.3
-transliterate~=1.10.2
-django-birthday~=0.1.4
-environs~=9.5.0
