--- a/.gitignore
+++ b/.gitignore
@@ -168,15 +168,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-./scripts
+.scripts/
 
 *.sqlite3
 
 fly.toml
 **/.env
-
-test_uuid.py
-test_random.py
-test_url.py
-test_cloudinary.py
-test_models.py
